--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 connection = smart
 timeout = 60
-inventory = ./hosts
+inventory = /opt/bitnami/apps/jenkins/jenkins_home/jobs/MinecraftIAC/workspace/ansible
 host_key_checking = false
