--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -4,5 +4,5 @@ enable_plugins = yaml, ini
 [defaults]
 connection = smart
 timeout = 60
-inventory = /opt/bitnami/apps/jenkins/jenkins_home/jobs/MinecraftIAC/workspace/ansible/hosts
+inventory = ./hosts
 host_key_checking = false
