--- a/ansible/minecraftsvr.yml
+++ b/ansible/minecraftsvr.yml
@@ -20,6 +20,7 @@
     - name : install java
       yum:
         name: java-16-openjdk-devel
+        lock_timeout: 180
     - name : download minecraft server
       become: yes
       get_url:
